--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Sep 02 20:40:05 GMT+05:30 2015
-sdk.dir=/Users/aakash/Downloads/android-sdks
+#Thu Sep 03 13:03:19 EEST 2015
+sdk.dir=E\:\\sdk
