--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Sep 04 01:15:50 GMT+05:30 2015
-sdk.dir=/Users/aakash/Downloads/android-sdks
+#Sat Sep 05 05:17:33 EEST 2015
+sdk.dir=E\:\\sdk
