--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -245,6 +245,9 @@
             android:name=".activities.EventHostSendMessage"
             android:windowSoftInputMode="stateHidden|adjustPan" />
         <activity
+            android:name=".activities.Attendee_NotificationActivity"
+            android:windowSoftInputMode="stateHidden|adjustPan" />
+        <activity
             android:name=".activities.CreateClassEventCompanyActivity"
             android:windowSoftInputMode="stateHidden|adjustPan" />
         <activity
