--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -251,6 +251,9 @@
             android:name=".activities.EventHost_AttendanceTakenActivity"
             android:windowSoftInputMode="stateHidden|adjustPan" />
         <activity
+            android:name=".activities.EventHost_ReportsActivity"
+            android:windowSoftInputMode="stateHidden|adjustPan" />
+        <activity
             android:name=".activities.CreateClassEventCompanyActivity"
             android:windowSoftInputMode="stateHidden|adjustPan" />
         <activity
