--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -254,6 +254,9 @@
             android:name=".activities.EventHost_ReportsActivity"
             android:windowSoftInputMode="stateHidden|adjustPan" />
         <activity
+            android:name=".activities.EventHost_Absent"
+            android:windowSoftInputMode="stateHidden|adjustPan" />
+        <activity
             android:name=".activities.CreateClassEventCompanyActivity"
             android:windowSoftInputMode="stateHidden|adjustPan" />
         <activity
