--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 08 20:51:01 GMT+05:30 2015
-sdk.dir=/Users/aakash/Downloads/android-sdks
+#Wed Sep 09 19:15:29 EEST 2015
+sdk.dir=E\:\\sdk
